# MicroExchange

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: ci.yml
analytics/include/: ImbalanceAnalyzer.h  ImpactAnalyzer.h  SpreadAnalyzer.h  StylizedFacts.h
bench/: bench_latency.cpp  bench_orderbook_compare.cpp  bench_throughput.cpp
core/include/: ArenaAllocator.h  ArrayOrderBook.h  MatchingEngine.h  Order.h  OrderBook.h  PriceLevel.h
core/tests/: test_invariants.cpp
docs/: visualizations.html
md/include/: FeedMessage.h  FeedPublisher.h  SPSCRingBuffer.h
net/include/: OrderEntryProtocol.h  OrderGateway.h
net/tests/: test_gateway.cpp
output/: benchmark_results.txt  report.txt  test_results.txt
research/: microstructure_paper.md
sim/include/: HawkesProcess.h  Simulator.h  ZIAgent.h
src/: main.cpp
